# crunchbase

./: Cargo.toml  README.md  article_to_summarize.md  example.sh  sample_prompts.txt  schema.sql
data/: funding-rounds-6-15-2023-AB.csv  funding-rounds-6-15-2023.csv  funding-rounds-6-16-2023.csv  funding-rounds-6-19-2023.csv  funding-rounds-6-21-2023.csv  funding-rounds-6-22-2023-2.csv  funding-rounds-6-22-2023-3.csv  funding-rounds-6-22-2023-4.csv  funding-rounds-6-22-2023.csv  funding-rounds-6-25-2023.csv  funding-rounds-6-27-2023.csv  funding-rounds-7-2-2023.csv  funding-rounds-8-8-2023-2.csv  funding-rounds-8-8-2023-3.csv  funding-rounds-8-8-2023.csv  funding_energy.csv  funding_fashion.csv  funding_finance.csv  funding_recent.csv  funding_series_a_b_last_30.csv  fundings.csv  fundings_ai.csv  fundings_apps.csv  fundings_commerce.csv  fundings_lifestyle.csv
examples/: macro_playground.rs
src/: funding.rs  main.rs  models.rs
src/api/: ask.rs  import.rs  mod.rs  query.rs  todo.md  util.rs
