[package]
name = "crunchbase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.3", features = ["derive"] }
csv = "1.2.2"
dotenv = "0.15.0"
llm-chain = "0.12.2"
llm-chain-openai = "0.12.2"
postgres = "0.19.5"
serde = { version = "1.0.164", features = ["derive"] }
tokio = { version = "1.28.2", features = ["full"] }
